syntax = "proto3";
package internal_command;
option go_package = "github.com/sandwich-go/internalcmd/protocol/internal_command";

// for devops checkup
message CmdCheckup {
  int32 code = 1;
  string message = 2;
  bytes CustomMeasurements = 3;
}

